--- a/HW1.Rmd
+++ b/HW1.Rmd
@@ -10,6 +10,7 @@ output:
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 
+# TODO: remove unused packages
 library(RColorBrewer)
 library(rgeos)
 library(rnaturalearth)
@@ -20,22 +21,26 @@ library(spData)
 ```
 
 ```{r}
+# Read in covid data from OWID github source
 covid <- read.csv("https://raw.githubusercontent.com/owid/covid-19-data/master/public/data/latest/owid-covid-latest.csv")
 
+# Join covid fields to world data on country name
 world_covid <- left_join(world, covid, by = c("name_long" = "location"))
 
+# Select fields of interest from joined dataTable
 world_covid_selected <- world_covid %>% 
   select("name_long", "geom", "total_cases", "total_cases_per_million", "total_deaths", "total_vaccinations", "people_fully_vaccinated")
 
+# Build map
 tm_shape(world_covid_filtered) +
   tm_polygons(col = "total_cases_per_million") +
-  tm_compass(type = "8star") +
+  tm_compass(type = "8star", position = "left") + # somewhere in the southern Pacific
   tm_style("col_blind") +
   tm_layout(
     legend.outside = T,
     main.title = 'some title'
   ) +
-  tm_credits("some text", position = "left")
+  tm_credits("some text", position = "right") # maybe we can fit this bottom/right inside of Antarctica
 
 ```
 
